# shannon-py

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
config/: features.yaml  models.yaml
docs/: DEVELOPMENT_PLAN.md
shannon_py/: __init__.py
shannon_py/agent/: __init__.py  core.py
shannon_py/api/: main.py  routes.py
shannon_py/application/: chat.py  tasks.py  tools.py
shannon_py/cli/: main.py
shannon_py/config/: __init__.py  settings.py
shannon_py/llm/: __init__.py  providers.py
shannon_py/memory/: __init__.py  session.py
shannon_py/observability/: __init__.py  metrics.py  runs.py  tracing.py
shannon_py/orchestration/: checkpoints.py  dag_graph.py  react_graph.py  research_graph.py  router.py  simple_graph.py
shannon_py/persistence/: __init__.py
shannon_py/policy/: __init__.py  approval.py  engine.py
shannon_py/research/: __init__.py
shannon_py/sandbox/: __init__.py  python_worker.py  workspace.py
shannon_py/streaming/: __init__.py  events.py  sse.py
shannon_py/swarm/: __init__.py  core.py
shannon_py/templates/: __init__.py
shannon_py/tools/: __init__.py  calculator.py  core.py  python_exec.py
tests/integration/: test_task_workflows.py
tests/unit/: test_agent_runtime.py  test_health.py  test_policy.py  test_sandbox.py  test_settings.py  test_sse.py  test_swarm.py  test_task_routes.py  test_tasks.py  test_tools.py  test_workflow_router.py
