[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "shannon-py"
version = "0.1.0"
description = "Full Python implementation of the Shannon agent platform kernel."
readme = "README.md"
requires-python = ">=3.11,<3.15"
license = { text = "Proprietary" }
authors = [
  { name = "Shannon Python Maintainers" }
]
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
  "pydantic>=2.8,<3.0",
  "pydantic-settings>=2.4,<3.0",
  "PyYAML>=6.0,<7.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27,<1.0",
  "pytest>=8.2,<9.0",
  "pytest-asyncio>=0.23,<1.0",
  "ruff>=0.6,<1.0",
]

[project.scripts]
shannon-py = "shannon_py.cli.main:main"

[tool.hatch.build.targets.wheel]
packages = ["shannon_py"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [
  ".venv",
  ".uv-cache",
  ".uv-python",
  ".uv-verify-venv",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
